# aml-example-scripts

./: .gitignore  pyproject.toml
01-register-data/: data.yml  register_data.ipynb
02-train-model/: train.ipynb  train.sh
02-train-model/env/: Dockerfile
04-deploy-online-endpoint/: online_endpoint.yml
04-deploy-online-endpoint/src/: score.py
config/: aml_config.sh  config.yaml  prod.env
data/endpoint/: sample_request.json
data/endpoint/sample_invocation/: sample_input.csv
environment/conda_env/: conda.yaml
environment/pip_env/: Dockerfile  requirements.txt
notebooks/: data.ipynb  deploy_batch.ipynb  deploy_online.ipynb  environment.ipynb  model_training.ipynb  register_model.ipynb
scripts/: az_configure.sh  deploy_local.sh
src/: score.py  score_batch.py
src/components/data_prep/: data_prep.py  data_prep.yaml
src/components/spark_step/: spark_step.py  spark_step.yaml
src/components/train/: train.py  train.yaml
src/pipelines/: model_training.yaml
workshop/01-register-data/: register_data.sh
workshop/02-train-model/: pipeline.yml
workshop/03-register-local-model/: register_model.sh
workshop/04-deploy-online-endpoint/: online_deployment.yml
