[tool.poetry]
name = "aml-example-scripts"
version = "0.1.0"
description = ""
authors = ["Minh Nguyen <>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
black = "^23.12.0"
isort = "^5.13.2"
azure-ai-ml = "^1.12.1"
azure-cli = "^2.55.0"
ipykernel = "^6.28.0"
scikit-learn = "^1.3.2"
pandas = "^2.1.4"
fsspec = "^2023.12.2"
azureml-fsspec = "^1.2.0"
python-dotenv = "^1.0.0"
pyyaml = "^6.0.1"
mlflow = "^2.9.2"
azureml-mlflow = "^1.54.0.post1"
azureml-inference-server-http = "^1.0.0"
mltable = "^1.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
